--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "body-parser": "^1.19.0",
     "@hapi/hapi": "^18.4.1",
     "@koa/router": "^9.0.1",
+    "koa-bodyparser": "^3.2.0",
     "@types/node": "^13.7.4",
     "ajv": "^6.12.6",
     "apollo-server-express": "^2.10.1",
