[ci][flaky] reporting

--- a/.ci/Jenkinsfile
+++ b/.ci/Jenkinsfile
@@ -357,7 +357,7 @@ pipeline {
   }
   post {
     cleanup {
-      notifyBuildResult()
+      notifyBuildResult(analyzeFlakey: !isTag(), flakyReportIdx: 'reporter-apm-agent-node-apm-agent-nodejs-master')
     }
   }
 }
