--- a/.tav.yml
+++ b/.tav.yml
@@ -243,7 +243,7 @@ elasticsearch:
   versions: '>=8.0.0'
   commands: node test/instrumentation/modules/elasticsearch.js
 
-@elastic/elasticsearch:
+'@elastic/elasticsearch':
   versions: '>=7.0.0 <8.0.0'
   commands: node test/instrumentation/modules/@elastic/elasticsearch.js
 
