--- a/package.json
+++ b/package.json
@@ -101,7 +101,6 @@
     "object-identity-map": "^1.0.2",
     "original-url": "^1.2.3",
     "read-pkg-up": "^7.0.1",
-    "redact-secrets": "^1.0.0",
     "relative-microtime": "^2.0.0",
     "require-ancestors": "^1.0.0",
     "require-in-the-middle": "^5.0.3",
@@ -111,6 +110,7 @@
     "sql-summary": "^1.0.1",
     "stackman": "^4.0.1",
     "traceparent": "^1.0.0",
+    "traverse": "^0.6.6",
     "unicode-byte-truncate": "^1.0.0"
   },
   "devDependencies": {
@@ -128,6 +128,7 @@
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
     "cassandra-driver": "^4.4.0",
+    "clone": "^2.0.0",
     "columnify": "^1.5.4",
     "connect": "^3.7.0",
     "container-info": "^1.0.1",
