feat: sanitize field names (#1898)
* feat: sanitize_field_names functionality implemented

* fix: inevitable lint

* fix: fixes out of control recursion

* fix: lint

* tests: starting integration tests for sanitize field names

* fix: lint

* test: test runner and fixtures for express

* chore: remove comments

* feat: add koa to test harness for sanitize_field_names

* chore: fix accidental "accept both", remove console.log

* feat: hapi tests

* feat: restify tests added to harness

* feat: fastify tests

* feat: fastify tests

* chore: adding issue links

* chore: use strict

* chore: revert this -- handling in a seperate pr

* feat: document the new configuration value

* chore: tav for body parsing

* chore: update config type

* chore: changelog entry

* chore: console.log removal

* chore: remove unneeded tests

* fix: making sanitizeFieldNames optional

* chore: fix ascii doc build errors

* feat: redact instead of remove, fix changelog

* chore: typos

* feat: adds sanitize regular expressions to is-secret

* chore: lint

* chore: update default in docs

* fix: adjusting tests to reflect the new world

* chore: lint lint lint

* Update docs/configuration.asciidoc

Co-authored-by: Trent Mick <trent.mick@elastic.co>

* Update docs/configuration.asciidoc

Co-authored-by: Trent Mick <trent.mick@elastic.co>

* chore: alphabetical order

* chore: update comments, rename function

* Update test/sanitize-field-names/fixtures.js

Co-authored-by: Trent Mick <trent.mick@elastic.co>

* Update test/sanitize-field-names/fixtures.js

Co-authored-by: Trent Mick <trent.mick@elastic.co>

* chore: central place for consants

* chore: lint

* chore: assert the error, not the fail

* chore: fix copy/pasta

* chore: ensure shared and fixture are not seen as tests

* chore: old comment hanging around

* chore: dup test?

* chore: fixing test label

* chore: subtest naming conventi

--- a/.tav.yml
+++ b/.tav.yml
@@ -348,3 +348,8 @@ finalhandler:
 memcached:
   versions: '>=2.2.0'
   commands: node test/instrumentation/modules/memcached.js
+
+body-parser:
+  versions: '>=1.19.0'
+  commands:
+    - node test/sanitize-field-names/express.js
