run redis module test: expect to fail on now redis service

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
     - run: npm install
-    - run: node test/metrics/index.js
+    - run: node test/instrumentation/modules/redis.js
