--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,13 @@ on:
 
 jobs:
   test-vers:
+    services:
+      redis:
+        image: redis
+        # # Map TCP port 6379 on Docker host to a random free port on the Redis container
+        # ports:
+        #   - 6379/tcp
+
     strategy:
       matrix:
         # XXX Just one version while in draft.
@@ -23,4 +30,5 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
     - run: npm install
+    - run: echo PING | nc localhost 6379
     - run: node test/instrumentation/modules/redis.js
