--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,6 @@ jobs:
       # XXX mssql
       # - mysql
       # - mongodb
-      # - postgresql
-      # - cassandra
-      # - memcached
       memcached:
         image: memcached
         ports:
@@ -30,6 +27,15 @@ jobs:
         image: cassandra
         ports:
           - 9042:9042
+      postgresql:
+        image: postgres
+        ports:
+          - 5432:5432
+      mongodb:
+        image: mongo
+        ports:
+          - 27017:27017
+      # XXX es
 
     strategy:
       matrix:
@@ -43,7 +49,11 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
     - run: npm install
+    - run: docker ps  # the services against which we'll be testing
     - run: node test/instrumentation/modules/redis.js
     - run: node test/instrumentation/modules/memcached.js
     - run: node test/instrumentation/modules/cassandra-driver/index.js
-    - run: docker ps   # do we have access to docker CLI?
+    - run: node test/instrumentation/modules/pg/pg.js
+    - run: node test/instrumentation/modules/pg/knex.js
+    - run: node test/instrumentation/modules/mongodb-core.js
+    - run: node test/instrumentation/modules/mongodb.js
