--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,29 +12,31 @@ on:
 jobs:
   test-vers:
     services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
-      # XXX mssql
-      # - mysql
-      # - mongodb
-      memcached:
-        image: memcached
-        ports:
-          - 11211:11211
-      cassandra:
-        image: cassandra
-        ports:
-          - 9042:9042
+      # redis:
+      #   image: redis
+      #   ports:
+      #     - 6379:6379
+      # memcached:
+      #   image: memcached
+      #   ports:
+      #     - 11211:11211
+      # cassandra:
+      #   image: cassandra
+      #   ports:
+      #     - 9042:9042
       postgresql:
         image: postgres
         ports:
           - 5432:5432
-      mongodb:
-        image: mongo
-        ports:
-          - 27017:27017
+      # mongodb:
+      #   image: mongo
+      #   ports:
+      #     - 27017:27017
+      # mysql:
+      #   image: mysql
+      #   ports:
+      #     - 3306:3306
+      # XXX mssql
       # XXX es
 
     strategy:
@@ -50,10 +52,14 @@ jobs:
         node-version: ${{ matrix.node }}
     - run: npm install
     - run: docker ps  # the services against which we'll be testing
-    - run: node test/instrumentation/modules/redis.js
-    - run: node test/instrumentation/modules/memcached.js
-    - run: node test/instrumentation/modules/cassandra-driver/index.js
+    # - run: node test/instrumentation/modules/redis.js
+    # - run: node test/instrumentation/modules/memcached.js
+    # - run: node test/instrumentation/modules/cassandra-driver/index.js
     - run: node test/instrumentation/modules/pg/pg.js
     - run: node test/instrumentation/modules/pg/knex.js
-    - run: node test/instrumentation/modules/mongodb-core.js
-    - run: node test/instrumentation/modules/mongodb.js
+    # - run: node test/instrumentation/modules/mongodb-core.js
+    # - run: node test/instrumentation/modules/mongodb.js
+    # - run: node test/instrumentation/modules/mysql/mysql.js
+    # - run: node test/instrumentation/modules/mysql/pool-release-1.js
+    # - run: node test/instrumentation/modules/mysql2/mysql.js
+    # - run: node test/instrumentation/modules/mysql2/pool-release-1.js
