--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
           - nodemssqldata:/var/opt/mssql
       elasticsearch:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.10
-        environment:
+        env:
           ES_JAVA_OPTS: '-Xms512m -Xmx512m'
           network.host: ''
           transport.host: '127.0.0.1'
