--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,6 +116,8 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
     - run: docker ps  # the services against which we'll be testing
+    - run: env  #XXX
     - run: npm install
     - run: ./test/script/run_tests.sh
-      env: CI=true
+      env:
+        CI: 'true'
