--- a/.tav.yml
+++ b/.tav.yml
@@ -246,9 +246,16 @@ elasticsearch:
 # @elastic/elasticsearch
 # - Version 7.7.0 included a change that broke usage with Node.js < 10.
 #   Fixed in 7.7.1: https://www.elastic.co/guide/en/elasticsearch/client/javascript-api/current/changelog-client.html#_7_7_1
-#   Note: When Node.js v8 support is dropped, `versions` can be simplified.
+#   Note: When this repo drops Node.js v8 support, `versions` can be simplified.
+# - Version 7.12.0 dropped support for node v8.
+'@elastic/elasticsearch-v7.0-v7.11':
+  name: '@elastic/elasticsearch'
+  versions: '>=7.0.0 <7.7.0 || >7.7.0 <7.12.0'
+  commands: node test/instrumentation/modules/@elastic/elasticsearch.js
 '@elastic/elasticsearch':
-  versions: '>=7.0.0 <7.7.0 || >7.7.0 <8.0.0'
+  name: '@elastic/elasticsearch'
+  versions: '>=7.12.0 <8.0.0'
+  node: '>=10.0.0'
   commands: node test/instrumentation/modules/@elastic/elasticsearch.js
 
 handlebars:
