test: tape -> tap
A start at converting the test suite from tape to tap. This will support
running tests in parallel. Some arguments for using node-tap is here:
https://github.com/elastic/ecs-logging-nodejs/pull/29
- Reliable at identifying failing tests in various cases (not that I
  have a specific gripe with tape)
- Pretty nice output. The highlighting of errors vs. tape can speed up
  dealing with test errors (after getting used to its output).
- Integrated coverage.
- Ability to have its "nice" test run renderer *and* separately produce
  TAP output for processing (as we want for CI).
- Should be able to drop the need for "test/test.js" for listing the
  test file dirs to scan.

--- a/package.json
+++ b/package.json
@@ -118,10 +118,8 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@elastic/elasticsearch": "^7.10.0",
-    "body-parser": "^1.19.0",
     "@hapi/hapi": "^18.4.1",
     "@koa/router": "^9.0.1",
-    "koa-bodyparser": "^3.2.0",
     "@types/node": "^13.7.4",
     "ajv": "^6.12.6",
     "apollo-server-express": "^2.10.1",
@@ -129,6 +127,7 @@
     "backport": "^5.1.2",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "cassandra-driver": "^4.4.0",
     "clone": "^2.0.0",
     "columnify": "^1.5.4",
@@ -154,6 +153,7 @@
     "jade": "^1.11.0",
     "knex": "^0.21.2",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^3.2.0",
     "koa-router": "^9.0.1",
     "lambda-local": "^1.7.1",
     "memcached": "^2.2.2",
@@ -177,6 +177,7 @@
     "rimraf": "^3.0.2",
     "send": "^0.17.1",
     "standard": "^14.3.3",
+    "tap": "^14.11.0",
     "tape": "^5.0.0",
     "tedious": "^9.2.1",
     "test-all-versions": "^4.1.1",
