chore: silence a warning from 'docker-compose --no-ansi ...' usage
The message is:
    --no-ansi option is deprecated and will be removed in future versions. Use `--ansi never` instead.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /test/babel/out.js
 /test/types/transpile/index.js
 /test-suite-output.tap
+/docker-compose.err
+/docker-compose.log
 
 # Folders to ignore
 /.nyc_output
