--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@
 #   modules
 # - the integration tests that run with an apm-server
 # - testing with ELASTIC_APM_ASYNC_HOOKS=false
-# - code coverage (npm run coverage, codecov)
+# - code coverage (npm run coverage)
 
 name: Test
 
