feta(node): add suppport to node 16
fix #2053 2053

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "url": "git://github.com/elastic/apm-agent-nodejs.git"
   },
   "engines": {
-    "node": "^8.6.0 || 10 || 12 || 13 || 14"
+    "node": "^8.6.0 || 10 || 12 || 13 || 14 || 16"
   },
   "keywords": [
     "opbeat",
