feat: support node 16; also test with node 15, drop testing of node 13
This borrows work from @kevcodez and myself on #1841.

Fixes: #2053

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,9 @@
 package-lock=false
+
+# Workaround unresolvable peerDependencies between express-graphql, graphql,
+# and apollo-server-express. npm v7 (included with node v15) makes these
+# peerDependencies issues an install error. Until the community catches up
+# and resolves peerDependencies issues or this modules tests are setup to
+# not have competing deps in "devDependencies", we revert to the pre-v7
+# behavior. https://docs.npmjs.com/cli/v7/using-npm/config#legacy-peer-deps
+legacy-peer-deps=true
