ci: CI docker TAV tests are unnecessarily setting up all services for some modules
Invert logic of the selection of an appropriate docker-compose config
for *TAV* testing in docker, to default to *not setting up any extra
services* for a test run, unless specifically required for that TAV
module. Before this, TAV tests for `@hapi/hapi`, `@koa/router`, and
`@elastic/elasticsearch` would setup *all* services, which is overkill.

Also document .ci/scripts/test.sh because it subtlely does a few
slightly different things. Also rename the TAV_MODULE var name to be
more accurate.

--- a/.ci/docker/docker-compose-node-test.yml
+++ b/.ci/docker/docker-compose-node-test.yml
@@ -21,7 +21,7 @@ services:
       PGUSER: 'postgres'
       MEMCACHED_HOST: 'memcached'
       NODE_VERSION: ${NODE_VERSION}
-      TAV: ${TAV_VERSIONS}
+      TAV: ${TAV_MODULE}
       ELASTIC_APM_ASYNC_HOOKS: ${ELASTIC_APM_ASYNC_HOOKS}
       HOME: /tmp
       PATH: /app/node_modules/.bin:./node_modules/.bin:/app/node_modules:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
