--- a/.ci/docker/docker-compose-node-edge-test.yml
+++ b/.ci/docker/docker-compose-node-edge-test.yml
@@ -25,7 +25,7 @@ services:
       NODE_VERSION: ${NODE_VERSION}
       NVM_NODEJS_ORG_MIRROR: ${NVM_NODEJS_ORG_MIRROR}
       ELASTIC_APM_ASYNC_HOOKS: ${ELASTIC_APM_ASYNC_HOOKS}
-      TAV: ${TAV_VERSIONS}
+      TAV: ${TAV_MODULE}
       HOME: /tmp
     volumes:
       - ${PWD}:/app
