feat: support node 16; also test with node 15, drop testing of node 13 (#2055)
This borrows work from @kevcodez and myself on #1841.

- enable node 16/15 testing for the GH Actions and Jenkins tests
- ensure OpenSSL SECLEVEL=0 for tests, required for http2.js test to pass in
  node:16 docker image
- fix hang with POST-handler + @hapi/hapi@18.x + node v16; we can just move on
  to hapi v20
- switching to hapi@20 means we need to skip out of hapi tests for node v10 and
  below

Fixes: #1840

--- a/.tav.yml
+++ b/.tav.yml
@@ -285,35 +285,46 @@ hapi-v9-v15:
   node: '>=4 <14'
   commands:
     - node test/instrumentation/modules/hapi/basic-legacy-path.js
-    - node test/instrumentation/modules/hapi/set-framework.js
+    - node test/instrumentation/modules/hapi/set-framework-hapi.js
 hapi-v16:
   name: hapi
   versions: '>=16.0.0 <17.0.0'
   node: '>=4'
   commands:
     - node test/instrumentation/modules/hapi/basic-legacy-path.js
-    - node test/instrumentation/modules/hapi/set-framework.js
-hapi:
+    - node test/instrumentation/modules/hapi/set-framework-hapi.js
+hapi-prenodev15:
   name: hapi
   versions: '>=17.0.0'
-  node: '>=8.12.0'
+  node: '>=8.12.0 <15.0.0'
   commands:
     - node test/instrumentation/modules/hapi/basic-legacy-path.js
-    - node test/instrumentation/modules/hapi/set-framework.js
+    - node test/instrumentation/modules/hapi/set-framework-hapi.js
+hapi:
+  name: hapi
+  # Work around https://github.com/npm/cli/issues/2267 in npm@7.
+  # Note: An alternative might be to just not test the "hapi" package with
+  # node >= 15, given that "hapi" was deprecated before node v16.
+  preinstall: rm -rf node_modules/hapi
+  node: '>=15.0.0'
+  versions: '>=17.0.0'
+  commands:
+    - node test/instrumentation/modules/hapi/basic-legacy-path.js
+    - node test/instrumentation/modules/hapi/set-framework-hapi.js
 '@hapi/hapi-v17-v18':
   name: '@hapi/hapi'
   versions: '>=17.0.0 <19.0.0'
   node: '>=8.12.0'
   commands:
     - node test/instrumentation/modules/hapi/basic.js
-    - node test/instrumentation/modules/hapi/set-framework-2.js
+    - node test/instrumentation/modules/hapi/set-framework-hapihapi.js
 '@hapi/hapi':
   name: '@hapi/hapi'
   versions: '>=19.0.0'
   node: '>=12'
   commands:
     - node test/instrumentation/modules/hapi/basic.js
-    - node test/instrumentation/modules/hapi/set-framework-2.js
+    - node test/instrumentation/modules/hapi/set-framework-hapihapi.js
 
 tedious:
   name: tedious
