--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,9 +6,17 @@ on:
   push:
     branches:
     - master
+    paths-ignore:
+    - '*.md'
+    - '*.asciidoc'
+    - 'docs/**'
   pull_request:
     branches:
     - master
+    paths-ignore:
+    - '*.md'
+    - '*.asciidoc'
+    - 'docs/**'
 
 jobs:
   lint:
