--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,17 @@ on:
   push:
     branches:
     - master
+    paths-ignore:
+    - '*.md'
+    - '*.asciidoc'
+    - 'docs/**'
   pull_request:
     branches:
     - master
+    paths-ignore:
+    - '*.md'
+    - '*.asciidoc'
+    - 'docs/**'
 
 jobs:
   test-vers:
