--- a/.ci/.jenkins_rc_nodejs.yml
+++ b/.ci/.jenkins_rc_nodejs.yml
@@ -1,6 +1,11 @@
+# This should list all active Node.js major versions listed at:
+# https://nodejs.org/en/about/releases/
+#
+# The node.js project *sometimes* produces "rc" builds leading up to a new
+# release. They get uploaded to: https://nodejs.org/download/rc/
 NODEJS_VERSION:
+  - "17"
   - "16"
   - "15"
   - "14"
   - "12"
-  - "10"
