aws-sdk TAV tests haven't been getting tested in CI

--- a/.ci/.jenkins_tav.yml
+++ b/.ci/.jenkins_tav.yml
@@ -3,6 +3,7 @@ TAV:
   - '@hapi/hapi'
   - '@koa/router'
   - apollo-server-express
+  - aws-sdk
   - bluebird
   - cassandra-driver
   - elasticsearch
