--- a/.tav.yml
+++ b/.tav.yml
@@ -51,7 +51,12 @@ ioredis-new:
   commands: node test/instrumentation/modules/ioredis.js
 pg-old-node:
   name: pg
-  versions: '>=4 <9'
+  # We want this version range:
+  #   versions: '>=4 <9'
+  # but only the latest MAJOR.MINOR.x to reduce the test matrix.
+  #
+  # Maintenance note: This should be updated for newer MAJOR.MINOR releases.
+  versions: '4.0.0 || 4.1.1 || 4.2.0 || 4.3.0 || 4.4.6 || 4.5.7 || 5.0.0 || 5.1.0 || 5.2.1 || 6.0.5 || 6.1.6 || 6.2.5 || 6.3.3 || 6.4.2 || 7.0.3 || 7.1.2 || 7.2.0 || 7.3.0 || 7.4.3 || 7.5.0 || 7.6.1 || 7.7.1 || 7.8.2 || 7.9.0 || 7.10.0 || 7.11.0 || 7.12.1 || 7.13.0 || 7.14.0 || 7.15.2 || 7.16.1 || 7.17.1 || 7.18.2 || 8.0.3 || 8.1.0 || 8.2.2 || 8.3.3 || 8.4.2 || 8.5.1 || 8.6.0 || >8.6.0 <9'
   node: '<14'
   peerDependencies:
     - bluebird@^3.0.0
@@ -61,7 +66,12 @@ pg-old-node:
     - node test/instrumentation/modules/pg/knex.js
 pg-new-node:
   name: pg
-  versions: '>=8.0.3 <9' # Prior versions didn't work in Node.js 14
+  # We want this version range:
+  #   versions: '>=8.0.3 <9' # Prior versions didn't work in Node.js 14
+  # but only the latest MAJOR.MINOR.x to reduce the test matrix.
+  #
+  # Maintenance note: This should be updated for newer MAJOR.MINOR releases.
+  versions: '8.0.3 || 8.1.0 || 8.2.2 || 8.3.3 || 8.4.2 || 8.5.1 || 8.6.0 || >8.6.0 <9'
   node: '>=14'
   peerDependencies:
     - bluebird@^3.0.0
