--- a/package.json
+++ b/package.json
@@ -192,7 +192,8 @@
   },
   "standard": {
     "ignore": [
-      "/test/sourcemaps/fixtures/lib"
+      "/test/sourcemaps/fixtures/lib",
+      "/test/stacktraces/fixtures/dist"
     ]
   }
 }
