--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "basic-auth": "^2.0.1",
     "cookie": "^0.4.0",
     "core-util-is": "^1.0.2",
-    "elastic-apm-http-client": "file:../apm-nodejs-http-client2",
+    "elastic-apm-http-client": "^9.8.0",
     "end-of-stream": "^1.4.4",
     "error-callsites": "^2.0.3",
     "error-stack-parser": "^2.0.6",
