--- a/package.json
+++ b/package.json
@@ -81,17 +81,21 @@
   "dependencies": {
     "@elastic/ecs-pino-format": "^1.1.0",
     "after-all-results": "^2.0.0",
+    "async-cache": "^1.1.0",
     "async-value-promise": "^1.1.1",
     "basic-auth": "^2.0.1",
     "cookie": "^0.4.0",
     "core-util-is": "^1.0.2",
     "elastic-apm-http-client": "^9.8.0",
     "end-of-stream": "^1.4.4",
+    "error-callsites": "^2.0.3",
     "error-stack-parser": "^2.0.6",
     "escape-string-regexp": "^4.0.0",
     "fast-safe-stringify": "^2.0.7",
     "http-headers": "^3.0.2",
     "is-native": "^1.0.1",
+    "load-source-map": "^2.0.0",
+    "lru-cache": "^6.0.0",
     "measured-reporting": "^1.51.1",
     "monitor-event-loop-delay": "^1.0.0",
     "object-filter-sequence": "^1.0.0",
@@ -105,7 +109,6 @@
     "set-cookie-serde": "^1.0.0",
     "shallow-clone-shim": "^2.0.0",
     "sql-summary": "^1.0.1",
-    "stackman": "^4.0.1",
     "traceparent": "^1.0.0",
     "traverse": "^0.6.6",
     "unicode-byte-truncate": "^1.0.0"
@@ -190,7 +193,8 @@
   },
   "standard": {
     "ignore": [
-      "/test/sourcemaps/fixtures/lib"
+      "/test/sourcemaps/fixtures/lib",
+      "/test/stacktraces/fixtures/dist"
     ]
   }
 }
