--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "unicode-byte-truncate": "^1.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.18.0",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
