--- a/.ci/docker/docker-compose-node-test.yml
+++ b/.ci/docker/docker-compose-node-test.yml
@@ -20,6 +20,7 @@ services:
       PGHOST: 'postgres'
       PGUSER: 'postgres'
       MEMCACHED_HOST: 'memcached'
+      LOCALSTACK_HOST: 'localstack'
       NODE_VERSION: ${NODE_VERSION}
       TAV: ${TAV_MODULE}
       ELASTIC_APM_ASYNC_HOOKS: ${ELASTIC_APM_ASYNC_HOOKS}
