--- a/package.json
+++ b/package.json
@@ -184,6 +184,7 @@
     "thunky": "^1.1.0",
     "typescript": "^3.7.5",
     "untildify": "^4.0.0",
+    "vasync": "^2.2.0",
     "wait-on": "^3.3.0",
     "ws": "^7.2.1"
   },
