--- a/.ci/docker/docker-compose-edge.yml
+++ b/.ci/docker/docker-compose-edge.yml
@@ -9,6 +9,10 @@ services:
     extends:
       file: docker-compose.yml
       service: elasticsearch
+  localstack:
+    extends:
+      file: docker-compose.yml
+      service: localstack
   memcached:
     extends:
       file: docker-compose.yml
@@ -42,6 +46,8 @@ services:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
+      localstack:
+        condition: service_healthy
       memcached:
         condition: service_healthy
       mongodb:
@@ -63,6 +69,8 @@ volumes:
   nodemssqldata:
     driver: local
   nodemysqldata:
+    driver: local
+  nodelocalstackdata:
     driver: local
   nodeesdata:
     driver: local
