github actions need to setup localstack as well; drop node 15 testing in GH actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,12 +105,21 @@ jobs:
         volumes:
           - nodeesdata:/usr/share/elasticsearch/data
 
+      localstack:
+        image: localstack/localstack:0.12.12
+        environment:
+          - "LOCALSTACK_SERVICES=s3"
+          - "DATA_DIR=/var/lib/localstack"
+        ports:
+          - "4566:4566"
+        volumes:
+          - nodelocalstackdata:/var/lib/localstack
+
     strategy:
       matrix:
         node:
           - '16'
           - '16.0'
-          - '15'
           - '14'
           - '14.0'
           - '12'
