--- a/.ci/.jenkins_nodejs.yml
+++ b/.ci/.jenkins_nodejs.yml
@@ -1,12 +1,13 @@
 NODEJS_VERSION:
-  - "16"
-  - "16.0"
-  - "15"
-  - "14"
-  - "14.0"
+  #XXX
+  # - "16"
+  # - "16.0"
+  # - "15"
+  # - "14"
+  # - "14.0"
   - "12"
-  - "12.0"
-  - "10"
-  - "10.0"
-  - "8"
-  - "8.6"
+  # - "12.0"
+  # - "10"
+  # - "10.0"
+  # - "8"
+  # - "8.6"
