--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -118,16 +118,17 @@ jobs:
     strategy:
       matrix:
         node:
-          - '16'
-          - '16.0'
-          - '14'
-          - '14.0'
+          #XXX
+          # - '16'
+          # - '16.0'
+          # - '14'
+          # - '14.0'
           - '12'
-          - '12.0'
-          - '10'
-          - '10.0'
-          - '8'
-          - '8.6'
+          # - '12.0'
+          # - '10'
+          # - '10.0'
+          # - '8'
+          # - '8.6'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
