feat: AWS S3 instrumentation of aws-sdk package (#2112)
Note that this only includes 'aws-sdk@2' instrumentation. Instrumentation
of '@awk-sdk/client-s3' (aka "v3" or the "Modular AWS SDK for JavaScript")
will be done in a separate change.

This adds localstack to the test suite for testing the S3 API.

Fixes: #1954

--- a/.ci/docker/docker-compose.yml
+++ b/.ci/docker/docker-compose.yml
@@ -114,6 +114,22 @@ services:
       timeout: 10s
       retries: 5
 
+  localstack:
+    # https://hub.docker.com/r/localstack/localstack/tags
+    image: localstack/localstack:0.12.12
+    environment:
+      - LOCALSTACK_SERVICES=s3
+      - DATA_DIR=/var/lib/localstack
+    ports:
+      - "4566:4566"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:4566/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - nodelocalstackdata:/var/lib/localstack
+
 volumes:
   nodepgdata:
     driver: local
@@ -126,4 +142,6 @@ volumes:
   nodeesdata:
     driver: local
   nodecassandradata:
+    driver: local
+  nodelocalstackdata:
     driver: local
