tests: fix mssql server Docker registry
Very recently MS removed the 'microsoft/mssql-server-linux' images from
Docker Hub in favour of https://hub.docker.com/_/microsoft-mssql-server
This was breaking tests.

--- a/.ci/docker/docker-compose.yml
+++ b/.ci/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       retries: 30
 
   mssql:
-    image: microsoft/mssql-server-linux
+    image: mcr.microsoft.com/mssql/server
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=Very(!)Secure
