--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       retries: 30
 
   mssql:
-    image: microsoft/mssql-server-linux
+    image: mcr.microsoft.com/mssql/server
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=Very(!)Secure
