--- a/.tav.yml
+++ b/.tav.yml
@@ -413,14 +413,15 @@ body-parser:
     - node test/sanitize-field-names/express.js
 
 aws-sdk:
-  # We want a version range something like this:
+  # We want this version range:
   #   versions: '>=2.858 <3'
   # However, awk-sdk releases *very* frequently (almost every day) and there
-  # is no need to test *all* those releases. Instead we statically list every
-  # N=5 releases to test.
+  # is no need to test *all* those releases. Instead we keep statically list
+  # every N=5 releases to test.
   #
-  # Maintenance note: This should be updated periodically.
-  versions: '2.876.0 || 2.881.0 || 2.886.0 || 2.891.0 || 2.896.0 || 2.901.0 || 2.906.0 || 2.911.0 || 2.916.0 || 2.921.0 || 2.926.0 || 2.931.0 || 2.936.0 || >2.918 <3'
+  # Maintenance note: This should be updated periodically, keeping 2.858
+  # as the earliest version but updating the others.
+  versions: '2.858.0 || 2.881.0 || 2.886.0 || 2.891.0 || 2.896.0 || 2.901.0 || 2.906.0 || 2.911.0 || 2.916.0 || 2.921.0 || 2.926.0 || 2.931.0 || 2.936.0 || >2.936 <3'
   commands:
     - node test/instrumentation/modules/aws-sdk/sqs.js
     - node test/instrumentation/modules/aws-sdk/dynamodb.js
