--- a/.tav.yml
+++ b/.tav.yml
@@ -422,5 +422,5 @@ aws-sdk:
   # Maintenance note: This should be updated periodically.
   versions: '2.858.0 || 2.863.0 || 2.868.0 || 2.873.0 || 2.878.0 || 2.883.0 || 2.888.0 || 2.893.0 || 2.898.0 || 2.903.0 || 2.908.0 || 2.913.0 || 2.918.0 || >2.918 <3'
   commands:
-    - node test/instrumentation/modules/aws-sdk/s3.js
+    - node test/instrumentation/modules/aws-sdk/s3.test.js
     - node test/instrumentation/modules/aws-sdk/sqs.js
