fix breakage in mimic-response@1.0.0 instrumentation
The mechanism to see if an EventEmitter has already been bound
to a run context (as required by the mimic-response instrumentation;
and *only* it) has changed.

This also removes the shimmer.isWrapped() export that was added
in #429 just for this case and is still the only usage of it.

--- a/.tav.yml
+++ b/.tav.yml
@@ -3,7 +3,9 @@ generic-pool:
   commands: node test/instrumentation/modules/generic-pool.test.js
 mimic-response:
   versions: ^1.0.0
-  commands: node test/instrumentation/modules/mimic-response.test.js
+  commands:
+    - node test/instrumentation/modules/mimic-response.test.js
+    - node test/instrumentation/modules/http/github-179.test.js
 got-very-old:
   name: got
   versions: '>=4.0.0 <9.0.0'
