ci: fix a race in Node.js nightly build selected for edge tests
Select the *penultimate* node.js nightly build to avoid a race where a
new nightly build is in https://nodejs.org/download/nightly/index.tab
but all the built packages are not yet uploaded.

Fixes: #2377

--- a/.ci/docker/node-edge-container/Dockerfile
+++ b/.ci/docker/node-edge-container/Dockerfile
@@ -15,6 +15,7 @@ ARG NODE_VERSION
 ARG NVM_NODEJS_ORG_MIRROR
 ARG ELASTIC_APM_ASYNC_HOOKS
 ENV NODE_VERSION=${NODE_VERSION}
+ENV NODE_FULL_VERSION=${NODE_FULL_VERSION}
 ENV NVM_NODEJS_ORG_MIRROR=${NVM_NODEJS_ORG_MIRROR}
 ENV ELASTIC_APM_ASYNC_HOOKS=${ELASTIC_APM_ASYNC_HOOKS}
 
@@ -29,7 +30,7 @@ ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
 # Install node
 RUN echo "source $NVM_DIR/nvm.sh && \
-    nvm install $NODE_VERSION && \
+    nvm install $NODE_FULL_VERSION && \
     nvm alias default $NODE_VERSION && \
     nvm use default" | bash
 
